--- a/gb/23/2/15/n13930015.md
+++ b/gb/23/2/15/n13930015.md
@@ -1,65 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>欠费人儿血癌全家住货柜屋 关怀转社福团体</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/02/id13930016-600031-600x400.jpg" />
 <h6>日前分署长柯怡伶（中）率同分署同仁，前往义务人住所关怀访视，捐赠慰问金8000元及毛毯等礼品，表达关怀之意，同时将此个案通报给云林县政府社会救助科予以救助。（法务部行政执行署嘉义分署提供）
 </h6>
 <hr>
-<p>【大纪元2023年02月15日讯】（大纪元记者李撷璎台湾嘉义报导）云林县曹姓男子欠缴2021年度<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%B3%E4%BF%9D%E8%B4%B9.md#1">劳保费</a>、汽车燃料费及罚锾等约5万元，于2022年3月起陆续被移送行政执行署嘉义分署强制执行。因<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%89%E5%8A%A1%E4%BA%BA.md#1">义务人</a>名下无可供执行<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B4%A2%E4%BA%A7.md#1">财产</a>，执行人员为了解<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%89%E5%8A%A1%E4%BA%BA.md#1">义务人</a>确实财产状况，前往其莿桐乡住处现场执行。</p>
-<figure id="attachment_13930017" aria-describedby="caption-attachment-13930017" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13930017-600032.jpg"><img class="size-large wp-image-13930017" src="https://i.epochtimes.com/assets/uploads/2023/02/id13930017-600032-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13930017" class="wp-caption-text">分署长柯怡伶（右2）关心义务人全家生活，义务人家人（左1）对于分署执行人员协助的好意，表示十分感谢。（法务部行政执行署嘉义分署提供）</figcaption></figure>
+<p>【大纪元2023年02月15日讯】（大纪元记者李撷璎台湾嘉义报导）云林县曹姓男子欠缴2021年度劳保费、汽车燃料费及罚锾等约5万元，于2022年3月起陆续被移送行政执行署嘉义分署强制执行。因义务人名下无可供执行财产，执行人员为了解义务人确实财产状况，前往其莿桐乡住处现场执行。</p>
+<figure id="attachment_13930017" aria-describedby="caption-attachment-13930017" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13930017-600032.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13930017" src="https://i.epochtimes.com/assets/uploads/2023/02/id13930017-600032-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13930017" class="wp-caption-text">分署长柯怡伶（右2）关心义务人全家生活，义务人家人（左1）对于分署执行人员协助的好意，表示十分感谢。（法务部行政执行署嘉义分署提供）</figcaption></figure>
 <p>执行人员赴现场发现义务人全家住在货柜屋中，生活条件不佳。其中义务人母亲于去年12月间车祸，目前由家人照顾生活，儿子自国小6年级诊断出血癌后开始长期治疗，目前已国中三年级，但是因为血癌造成身体免疫系统问题，无法到校上课，只能在家中借助网路线上上课，惟日前手机损坏，家里因经济因素无法添置新手机，以致无法进行线上教学，严重影响课业。义务人一家人住在货柜屋，夏天炎热冬天寒冷，全家生计仅靠义务人租人田地耕作农获及妻子做手工业微薄收入，生活极其困苦。</p>
 <p>在检视义务人住处及了解全家生活状况后，执行人员确认他们急需社会的救助才能维持生活，义务人儿子才能好好治疗并继续学业。执行人员即刻回报列为关怀个案，联络转介社会福利慈善事业基金会给予补助。</p>
-<figure id="attachment_13930018" aria-describedby="caption-attachment-13930018" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13930018-600033.jpg"><img class="size-large wp-image-13930018" src="https://i.epochtimes.com/assets/uploads/2023/02/id13930018-600033-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13930018" class="wp-caption-text">欠费人儿血癌，全家住货柜屋，嘉义分署关怀转<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E7%A6%8F.md#1">社福</a>团体。（法务部行政执行署嘉义分署提供）</figcaption></figure>
+<figure id="attachment_13930018" aria-describedby="caption-attachment-13930018" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13930018-600033.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13930018" src="https://i.epochtimes.com/assets/uploads/2023/02/id13930018-600033-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13930018" class="wp-caption-text">欠费人儿血癌，全家住货柜屋，嘉义分署关怀转社福团体。（法务部行政执行署嘉义分署提供）</figcaption></figure>
 <p>嘉义分署爱心社则募集同仁爱心捐献，日前分署长柯怡伶率同分署同仁，前往义务人住所关怀访视，捐赠慰问金8000元及毛毯等礼品，表达关怀之意，同时将此个案通报给云林县政府社会救助科予以救助，希望透过嘉义分署的关怀，将社会温暖传递至义务人及其家人。义务人家人对于分署执行人员协助的好意，表示十分感谢。</p>
-<p>行政执行署向来秉持公义与关怀的核心价值为民提供多元服务，除积极追缴滞欠大户，落实公权力外，对于经济困难的义务人，也都能以同理心采取分期缴纳、转介<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E7%A6%8F.md#1">社福</a>机构或通报地方政府相关单位，提供协助等宽缓执行措施，让公义与关怀得以充分落实。◇</p>
+<p>行政执行署向来秉持公义与关怀的核心价值为民提供多元服务，除积极追缴滞欠大户，落实公权力外，对于经济困难的义务人，也都能以同理心采取分期缴纳、转介社福机构或通报地方政府相关单位，提供协助等宽缓执行措施，让公义与关怀得以充分落实。◇</p>
 <p>责任编辑：黄善</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/22/n13665091.md#1">桃园1职业工会欠劳保费逾121万 移行政执行</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/30/n13836277.md#1">劳保费率 112年调高至12% 　　</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/7/n13880006.md#1">酒驾罚锾未缴 义务人土地遭法拍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13901924.md#1">苏花科技执法 鹰眼追查义务人车辆立大功</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925485.md#1">吴武宪携手社福单位 传承烘焙技巧启动善循环</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13925969.md#1">落实行政透明 桃市工务局公职财产申报审查</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927287.md#1">曾身陷囹圄财产归零 刘晓庆开直播卖书法作品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929532.md#1">屏东内埔社福馆启用 提供多元全人照顾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033528.md#1">警察大白熊进打诈嘉市队 召唤神队友齐反诈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033422.md#1">嘉义市住宿营利事业销售额成长再创佳绩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/22/n13665091.md#1">桃园1职业工会欠劳保费逾121万 移行政执行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/30/n13836277.md#1">劳保费率 112年调高至12% 　　</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/7/n13880006.md#1">酒驾罚锾未缴 义务人土地遭法拍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/8/n13901924.md#1">苏花科技执法 鹰眼追查义务人车辆立大功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/8/n13925485.md#1">吴武宪携手社福单位 传承烘焙技巧启动善循环</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/9/n13925969.md#1">落实行政透明 桃市工务局公职财产申报审查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/10/n13927287.md#1">曾身陷囹圄财产归零 刘晓庆开直播卖书法作品</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/14/n13929532.md#1">屏东内埔社福馆启用 提供多元全人照顾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309650.md#1">嘉大师生USR 获选2024台北金雕微电影银奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309123.md#1">排湾族收获祭！三地门部落文化大联欢</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/18/n10492678.md#1" target="_blank">仰岳：共产党如何干扰美国的对华政策</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/2/n11084381.md#1" target="_blank">林辉：中共这些“特别党员”效力后自取其辱</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/12/n11717665.md#1" target="_blank">国际人权日 美多位议员谴责中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14029969.md#1">【未解之谜】深海探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030544.md#1">我所遇见的中国“灵魂”们（上）：撞见司机的内心宇宙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/27/n14023265.md#1">带着记忆转生 小婴儿刚出生就会说话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018167.md#1">【杨延昭传奇】马刨泉的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027072.md#1">宰相范质遇到的神奇事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/23/n14021199.md#1">【思想领袖】自由和民族归属感是幸福人生要素</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14032955.md#1">【中国禁闻】中国经济面临通缩危机 陷恐恶循环</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14033205.md#1">【菁英论坛】苏州讲话遭恶搞 习最大恐惧在哪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14031982.md#1">爱尔兰男子称目击尼斯湖水怪 公布画面为证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032103.md#1">秦刚行踪成谜 传北京改派王毅出席东盟会议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031873.md#1">济南大学每月补助外国留学生3万？爆料人遭处理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14032730.md#1">瑞莎领队赴欧扫19金 台小将披国旗登台28次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032443.md#1">梁朝伟与刘德华同框 两人表情迥异引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032055.md#1">《不可能7》造真实火车只为摧毁 台湾票房亮眼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032434.md#1">章子怡黄晓明退出共同持股公司 引网民围观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032271.md#1">家属希望能在台立李玟纪念碑 网路一面倒回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031775.md#1">深色蜂蜜更抗氧化？这种蜂蜜每天来两勺获益最大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14024254.md#1">忽视帕金森病9个早期迹象 可能错过最佳治疗期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/17/n14017966.md#1">口腔问题影响全身健康？专家告诉你答案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032167.md#1">三成以上游客会腹泻 避免特定饮食能改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032025.md#1">夏季危机 溺水成美国幼儿头号杀手</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304840.md#1">夏海珍——苦海泅渡的修炼故事（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/14/n14180530.md#1">【古韵流芳】和序文双璧同辉的滕王阁诗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306694.md#1">【人妻日常】突破难熬的磨合期</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/15/n13930015.htm">欠费人儿血癌全家住货柜屋 关怀转社福团体</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930015.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/15/n13930015.htm">欠费人儿血癌全家住货柜屋 关怀转社福团体</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/15/n13930015.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
